lab-LinuxFoundation-K8s-Gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
spec:
  parentRefs:
    - name: ingress-gateway
  hostnames:
    - "httpbin.com"
  rules:
    - backendRefs:
        - name: httpbin
          port: 8000
